syntax = "proto3";
package ibc.lightclients.lcp.v1;

import "gogoproto/gogo.proto";
import "ibc/core/client/v1/client.proto";

option go_package = "github.com/datachainlab/lcp/go/light-clients/lcp/types";
option (gogoproto.goproto_getters_all) = false;

message UpdateClientMessage {
  bytes commitment = 1;
  bytes signer = 2;
  bytes signature = 3;
}

message RegisterEnclaveKeyMessage {
  string report = 1;
  bytes signature = 2;
  bytes signing_cert = 3;
}

message ClientState {
  ibc.core.client.v1.Height latest_height = 1 [(gogoproto.nullable) = false];
  bytes mrenclave = 2;
  uint64 key_expiration = 3;
  // e.g. SW_HARDENING_NEEDED, CONFIGURATION_AND_SW_HARDENING_NEEDED (except "OK")
  repeated string allowed_quote_statuses = 4;
  // e.g. INTEL-SA-XXXXX
  repeated string allowed_advisory_ids = 5;
}

message ConsensusState {
  bytes state_id = 1;
  // unix timestamp in seconds
  uint64 timestamp = 2;
}
